--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,14 @@
 <resources>
     <string name="app_name">Chameleody</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="file_name">File Name</string>
+    <string name="album_art">Album art</string>
+    <string name="album">Album</string>
+    <string name="gradient">gradient</string>
+    <string name="recent">Recent</string>
+    <string name="favorites">Favorites</string>
+    <string name="playlists">Playlists</string>
+    <string name="track_name">Track Name</string>
+    <string name="track_artist">Track Artist</string>
+    <string name="smart_shuffle">Smart shuffle</string>
 </resources>
